--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,12 @@
         </dependency>
 
     </dependencies>
-
+    <distributionManagement>
+        <repository>
+            <id>local-maven</id>
+            <url>file:${project.basedir}/release</url>
+        </repository>
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
